# godot-video

./: .gitignore  CMakeLists.txt  README.md  fszm-test.sh  nuc-test.sh
android-plugin/: .gitignore  build.gradle.kts  settings.gradle.kts
android-plugin/gav/: .gitignore  build.gradle.kts
android-plugin/gav/src/main/: AndroidManifest.xml
android-plugin/gav/src/main/assets/: gav.gdextension
android-plugin/gav/src/main/kotlin/org/tweaklab/gav/plugin/: GavPlugin.kt
android-plugin/libs/ffmpeg/: README.md
archive/: gav_playback.cpp  gav_playback.h  gav_stream.cpp  gav_texture.cpp  gav_texture.h  gav_video.cpp  gav_video.h  helpers.h  packet_decoder.h  register_types.cpp  vk_ctx.h
demo/: 4K_h265_60p_10bit.mov.uid  4k_h264_30p.mp4.uid  4k_h264_30p_trimmed.mp4.uid  8k_h265.mp4.uid  Adrian_Loop_360.mov.uid  Andrea_MASTER.mp4.uid  Fanny_small_reencoded.mp4.uid  ST_HD_60p_H265_Gitter_Kreise.mp4.uid  ST_UHD_30p_H264_Gitter_Kreise_Ton_5_1.mp4.uid  ST_UHD_30p_H265_Gitter_Kreise_Ton_5_1.mp4.uid  ST_UHD_60p_H264_Gitter_Kreise_Ton_5_1.mp4.uid  ST_UHD_60p_H265_Gitter_Kreise_Ton_5_1.mp4.uid  example.gd  example.tscn  export_presets.cfg  input.mp4.uid  ltc.mov.uid  ltc.mp4.uid  multiple.gd  multiple.gd.uid  multiple.tscn  no_ending.mp4.uid  project.godot  single_video.gd  single_video.gd.uid  single_video.tscn  testvideo_2160x3840_30_0001-0250_t1.mp4.uid  testvideo_2160x3840_30_0001-0250_t1_wide.mp4.uid  video4.mp4.uid
demo/addons/gav/: gav_export.gd  plugin.cfg  plugin.gdextension
src/: av_video.cpp  av_video.h  ffmpeg_hw_decode_sample.c  gav_loader.cpp  gav_playback.cpp  gav_playback.h  gav_stream.cpp  gav_stream.h  gav_texture.cpp  gav_texture.h  gav_video.cpp  helpers.h  packet_decoder.cpp  packet_decoder.h  register_types.cpp  shaders.cpp  shaders.h  vk_ctx.cpp  vk_ctx.h
src/av_wrapper/: av_codecs.cpp  av_codecs.h  av_helpers.cpp  av_helpers.h  av_player.cpp  av_player.h
src/godot/: gav_jni.cpp  gav_jni.h  gav_loader.cpp  gav_loader.h  gav_log.h  gav_playback.cpp  gav_playback.h  gav_settings.cpp  gav_settings.h  gav_singleton.cpp  gav_singleton.h  gav_stream.cpp  gav_stream.h  gav_texture.cpp  gav_texture.h  register_types.cpp  register_types.h  shaders.cpp  shaders.h  vk_ctx.cpp  vk_ctx.h
